# tunarr-autoscheduler

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-stack.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_config.py  test_core.py  test_jellyfin_client.py  test_jellyfin_sync.py  test_jobs.py  test_logging.py  test_metadata_clients.py  test_metrics.py  test_notifications.py  test_playlists.py  test_plugins.py  test_recommendations.py  test_schema.py  test_state.py  test_timeline.py  test_tunarr_client.py  test_web.py
tunarr_autoscheduler/: main.py
tunarr_autoscheduler/core/: app_logging.py  auth.py  backups.py  checkpoint.py  config.py  diagnostics.py  event_bus.py  job_manager.py  metrics.py  plugin_loader.py  schedule_health.py  schedule_monitor.py  state.py  timeline.py  timezones.py
tunarr_autoscheduler/db/: database.py  schema.py
tunarr_autoscheduler/db/repositories/: audit_repo.py  media_repo.py  playlist_repo.py  (+2 more)
tunarr_autoscheduler/integrations/: notifications.py
tunarr_autoscheduler/models/: blocks.py  config.py  playlist.py  schedule.py
tunarr_autoscheduler/plugins/: ad_inserter.py  continuity_inserter.py  daypart_applicator.py  event_scheduler.py  gap_filler.py  html_preview.py  humanizer.py  movie_scheduler.py  rotation_scheduler.py  schedule_persister.py  statistics.py  tunarr_uploader.py  validators.py
tunarr_autoscheduler/recommendations/: __init__.py  engine.py  language.py  profiles.py  signals.py
tunarr_autoscheduler/web/: app.py
(+54 files in other folders)
